# get-weather-data

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  Citation.cff  LICENSE  README.md  README.rst  Readme.md  anaconda-project.yml  appveyor.yml  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  tox.ini
.github/: dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  publish.yml  release.yml
docs/: Makefile  api.md  cli.md  conf.py  environment.yml  index.md  index.rst  install.rst  quickstart.md
docs/source/: conf.py  index.rst  noaaweb.rst  zip2wd.rst
examples/: basic_usage.py  batch_processing.py  cli_usage.sh  date_range.py  process_csv.py
get-weather-data/: LICENSE  PKG-INFO  README.rst  setup.py
get-weather-data/docs/: make.bat
get-weather-data/docs/source/: conf.py  index.rst  zip2ws.rst
get-weather-data/get_weather_data.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
get-weather-data/noaaweb/: sampleout.csv
get-weather-data/zip2wd/: README.md  demographics2input.py  manager.py  output.csv  worker.py  zip2wd.py
get-weather-data/zip2ws/: readme.md  zip2ws.py
get-weather-data/zip2ws/inventories/: README.md  asos-stations.txt  coop-act.txt  free-zipcode-database-primary.csv  ghcnd-stations.txt  ish-history.csv
getwd/: MANIFEST.in  appveyor.yml  setup.py
getwd/data/inventories/: asos-stations.txt
getwd/data/zip2ws/: zip2ws.py
getwd/getwd/: column-names.txt  manager.py  worker.py  zip2wd.py  zip2wd_mp.py
getwd/getwd/zip2wd/: sample-out-basic.csv
noaaweb/: README.md  __init__.py  noaaweb.py  requirements.txt  samplein.csv
src/get_weather_data/: __init__.py  cli.py  main.py
src/get_weather_data/api/: __init__.py  noaa.py
src/get_weather_data/core/: __init__.py  cache.py  config.py  database.py  distance.py  download.py  logging.py
src/get_weather_data/stations/: __init__.py  closest.py  ghcnd.py  isd.py  zipcodes.py
src/get_weather_data/weather/: __init__.py  batch.py  ghcn.py  gsod.py  location.py  lookup.py  online.py  results.py  units.py
tests/: __init__.py  conftest.py  test_010_noaaweb.py  test_020_zip2ws.py  test_030_zip2wd.py  test_batch.py  test_cache.py  test_cli.py  test_database.py  test_distance.py  test_ghcn.py  test_http.py  test_location.py  test_lookup.py  test_noaa.py  test_units.py  test_utils.py
ws2zip/: README.md  __init__.py  coop-stations-out.txt  coop-stations.txt  weather.py
zip2wd/: README.TXT  README.md  __init__.py  column-names-info.txt  column-names.txt  demographics2input.py  manager.py  sample-input-basic.csv  sample-input-extend.csv  sample-out-extend.csv  worker.py  zip2wd.py  zip2wd_r4.py
zip2wd/data/: import-db.sh
zip2wd_mp/: README.md  zip2wd.cfg  zip2wd.py
zip2ws/: __init__.py  readme.md  readme.txt  zip2ws.py
zip2ws/data/: free-zipcode-database-primary.csv  isd-history.csv
zip2ws/inventories/: coop-act.txt  ish-history.csv
