[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "get-weather-data"
version = "3.2.0"
description = "Get historical weather data for US ZIP codes from NOAA stations"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Suriyan Laohaprapanon", email = "suriyant@gmail.com" },
    { name = "Gaurav Sood", email = "gsood07@gmail.com" },
]
keywords = ["weather", "zip", "noaa", "climate", "stations", "ghcn", "gsod"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
fast = [
    "scipy>=1.11",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "respx>=0.21",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.4",
    "mypy>=1.8",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.0",
    "sphinx-autodoc-typehints>=2.0",
    "myst-parser>=3.0",
]

[project.scripts]
get-weather = "get_weather_data.cli:main"

[project.urls]
Homepage = "https://github.com/soodoku/get-weather-data"
Repository = "https://github.com/soodoku/get-weather-data"
Issues = "https://github.com/soodoku/get-weather-data/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/get_weather_data"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["scipy.*", "numpy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/get_weather_data"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
