[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "get-weather-data"
description = "Get historical weather data for US ZIP codes from NOAA stations"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Suriyan Laohaprapanon", email = "suriyant@gmail.com" },
    { name = "Gaurav Sood", email = "gsood07@gmail.com" },
]
keywords = ["weather", "zip", "noaa", "climate", "stations", "ghcn", "gsod"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
]
dynamic = ["version"]

[project.optional-dependencies]
fast = [
    "scipy>=1.11",
]

[project.scripts]
get-weather = "get_weather_data.cli:main"

[project.urls]
Homepage = "https://github.com/soodoku/get-weather-data"
Repository = "https://github.com/soodoku/get-weather-data"
Issues = "https://github.com/soodoku/get-weather-data/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/get_weather_data"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
external = ["DOC"]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "D", "S", "SIM", "T20", "PT", "RUF"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "D"]
"examples/**" = ["T20", "S", "D"]  # demo scripts: prints and literal paths are the point
"docs/**" = ["D"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/get_weather_data"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"

[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
check-class-attributes = false
allow-init-docstring = true
exclude = '\.venv|tests|docs'

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"

[dependency-groups]
dev = [
    "ruff>=0.14",
    "pyright>=1.1.390",
    "pydoclint>=0.5",
    "pre-commit>=4",
    { include-group = "test" },
]
test = [
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-mock>=3.12",
    "respx>=0.21",
]
docs = [
    "sphinx>=8",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
    "py-canon @ git+https://github.com/gojiplus/py-canon@v1",
]
